[tool.poetry]
name = "async-sqlalchemy"
version = "0.1.0"
description = "Async sqlalchemy experiments"
authors = ["Mau Trigo <mtrigo143@gmail.com>"]
readme = "README.md"
packages = [{include = "async_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-dotenv = "^1.0.0"
logzero = "^1.7.0"
faker = "^19.3.1"
alembic = "^1.11.3"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.28.0"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
